Remove docs since they're going to be part of the AC 3 docs

--- a/renovate.json
+++ b/renovate.json
@@ -9,11 +9,5 @@
   "automerge": "minor",
   "labels": ["tooling", "dependencies"],
   "assignees": ["@hwillson"],
-  "reviewers": ["@hwillson"],
-  "pathRules": [
-    {
-      "paths": ["docs/package.json"],
-      "extends": ["apollo-docs"]
-    }
-  ]
+  "reviewers": ["@hwillson"]
 }
