--- a/packages/apollo-link-polling/package.json
+++ b/packages/apollo-link-polling/package.json
@@ -35,7 +35,7 @@
     "watch": "tsc -w -p . & rollup -c -w"
   },
   "dependencies": {
-    "@apollo/client": "^3.0.0-alpha.6",
+    "@apollo/client": "^3.0.0-beta.7",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
